objects/LiveChatTranscript.object
<CustomObject>
    <fields>
        <fullName>Abandoned_Chat__c</fullName>
        <description>Used for calculating abandons</description>
        <formula>IF(  Abandoned  &gt; 0, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Abandoned Chat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApplicationId__c</fullName>
        <label>Application ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatDisposition__c</fullName>
        <label>Chat Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deposit Account</fullName>
                </value>
                <value>
                    <fullName>Business Account</fullName>
                </value>
                <value>
                    <fullName>Mortgage Account</fullName>
                </value>
                <value>
                    <fullName>Personal Loan</fullName>
                </value>
                <value>
                    <fullName>Bill Pay</fullName>
                </value>
                <value>
                    <fullName>Debit Card</fullName>
                </value>
                <value>
                    <fullName>Deposit Inquiry</fullName>
                </value>
                <value>
                    <fullName>Dispute a Transaction</fullName>
                </value>
                <value>
                    <fullName>IRA</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Enrollment</fullName>
                </value>
                <value>
                    <fullName>Not Resolved</fullName>
                    <isActive>false</isActive>
                    <label>Not Resolved</label>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                    <isActive>false</isActive>
                    <label>Resolved</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChatEmail__c</fullName>
        <label>ChatEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ChatFirstName__c</fullName>
        <label>ChatFirstName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatLastName__c</fullName>
        <label>ChatLastName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatPhone__c</fullName>
        <label>ChatPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Chat_Inquiry_Type__c</fullName>
        <label>Chat Inquiry Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checking, Savings, or other deposit accounts</fullName>
                </value>
                <value>
                    <fullName>Existing Mortgage, Auto or other loans</fullName>
                </value>
                <value>
                    <fullName>All Other New Account Inquiries</fullName>
                </value>
                <value>
                    <fullName>New Online Banking Help</fullName>
                </value>
                <value>
                    <fullName>Advisor Account Opening</fullName>
                    <isActive>false</isActive>
                    <label>Advisor Account Opening</label>
                </value>
                <value>
                    <fullName>Advisor Dashboard Help</fullName>
                    <isActive>false</isActive>
                    <label>Advisor Dashboard Help</label>
                </value>
                <value>
                    <fullName>Apply for a loan</fullName>
                    <isActive>false</isActive>
                    <label>Apply for a loan</label>
                </value>
                <value>
                    <fullName>Bank account features and benefits</fullName>
                    <isActive>false</isActive>
                    <label>Bank account features and benefits</label>
                </value>
                <value>
                    <fullName>Bill Pay</fullName>
                    <isActive>false</isActive>
                    <label>Bill Pay</label>
                </value>
                <value>
                    <fullName>Business Account</fullName>
                    <isActive>false</isActive>
                    <label>Business Account</label>
                </value>
                <value>
                    <fullName>Customer Information Inquiry</fullName>
                    <isActive>false</isActive>
                    <label>Customer Information Inquiry</label>
                </value>
                <value>
                    <fullName>Debit card</fullName>
                    <isActive>false</isActive>
                    <label>Debit card</label>
                </value>
                <value>
                    <fullName>Deposit Account</fullName>
                    <isActive>false</isActive>
                    <label>Deposit Account</label>
                </value>
                <value>
                    <fullName>Deposit inquiry</fullName>
                    <isActive>false</isActive>
                    <label>Deposit inquiry</label>
                </value>
                <value>
                    <fullName>Dispute a transaction</fullName>
                    <isActive>false</isActive>
                    <label>Dispute a transaction</label>
                </value>
                <value>
                    <fullName>Forgot Advisor Password</fullName>
                    <isActive>false</isActive>
                    <label>Forgot Advisor Password</label>
                </value>
                <value>
                    <fullName>Forgot Advisor UserName</fullName>
                    <isActive>false</isActive>
                    <label>Forgot Advisor UserName</label>
                </value>
                <value>
                    <fullName>I am an HRB Customer</fullName>
                    <isActive>false</isActive>
                    <label>I am an HRB Customer</label>
                </value>
                <value>
                    <fullName>IRA</fullName>
                    <isActive>false</isActive>
                    <label>IRA</label>
                </value>
                <value>
                    <fullName>Mortgage Loan</fullName>
                    <isActive>false</isActive>
                    <label>Mortgage Loan</label>
                </value>
                <value>
                    <fullName>Open a business bank account</fullName>
                    <isActive>false</isActive>
                    <label>Open a business bank account</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Personal Loan</fullName>
                    <isActive>false</isActive>
                    <label>Personal Loan</label>
                </value>
                <value>
                    <fullName>Question about your business bank account</fullName>
                    <isActive>false</isActive>
                    <label>Question about your business bank account</label>
                </value>
                <value>
                    <fullName>Question about your loan</fullName>
                    <isActive>false</isActive>
                    <label>Question about your loan</label>
                </value>
                <value>
                    <fullName>Speak with Relationship Manager</fullName>
                    <isActive>false</isActive>
                    <label>Speak with Relationship Manager</label>
                </value>
                <value>
                    <fullName>Types of loans</fullName>
                    <isActive>false</isActive>
                    <label>Types of loans</label>
                </value>
                <value>
                    <fullName>Wire</fullName>
                    <isActive>false</isActive>
                    <label>Wire</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>Advisor_Chat_Overflow_LiveChatTranscript</fullName>
        <filterScope>Queue</filterScope>
        <label>Advisor Chat Overflow</label>
        <queue>Advisor_Chat_Overflow</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Advisor_Chat_Queue_LiveChatTranscript</fullName>
        <filterScope>Queue</filterScope>
        <label>Advisor Chat Queue</label>
        <queue>Advisor_Chat_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Business_Banking_Chat_Queue_LiveChatTranscript</fullName>
        <filterScope>Queue</filterScope>
        <label>Business Banking Chat Queue</label>
        <queue>Business_Banking_Chat_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Business_Banking_Overflow_Chats_LiveChatTranscript</fullName>
        <filterScope>Queue</filterScope>
        <label>Business Banking Overflow Chats</label>
        <queue>Business_Banking_Overflow_Chats</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Consumer_Deposits_Chat_Overflow_LiveChatTranscript</fullName>
        <filterScope>Queue</filterScope>
        <label>Consumer Deposits Chat Overflow</label>
        <queue>Consumer_Deposits_Chat_Overflow</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Consumer_Deposits_Chat_Queue_LiveChatTranscript</fullName>
        <filterScope>Queue</filterScope>
        <label>Consumer Deposits Chat Queue</label>
        <queue>Consumer_Deposits_Chat_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Loan_Servicing_Chat_Queue_LiveChatTranscript</fullName>
        <filterScope>Queue</filterScope>
        <label>Loan Servicing Chat Queue</label>
        <queue>Loan_Servicing_Chat_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UDB_Cases_LiveChatTranscript</fullName>
        <filterScope>Queue</filterScope>
        <label>UDB Cases</label>
        <queue>UDB_Cases</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UDB_Chat_Queue_LiveChatTranscript</fullName>
        <filterScope>Queue</filterScope>
        <label>UDB Chat Queue</label>
        <queue>UDB_Chat_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>